squash! Fixing issue https://github.com/KamandPrompt/baat-cheet/issues/66
adding missed out code from public/style.css

--- a/public/style.css
+++ b/public/style.css
@@ -654,6 +654,10 @@ body {
   background: #f8f8f8;
 }
 
+#room input, #room textarea {
+  font-size:1.1em;
+}
+
 #room>div {
   border-radius: 2px;
   padding: 20px 30px;
